# oop_coursework

./: .env_template  .flake8  README.md  main.py  pyproject.toml
data/: vacancies.json
src/: abstract_classes.py  api_connector.py  file_worker.py  utils.py  vacancy.py
tests/: test_abstract_classes.py  test_api_connector.py  test_file_worker.py  test_utils.py  test_vacancy.py
